xee-xslt-ast/src/snapshots/xee_xslt_ast__parse3__tests__simple_parse_if.snap
---
source: xee-xslt-ast/src/parse3.rs
expression: "parser(&names).parse_with_state(stream, &mut state).into_result()"
---
Ok(If(If(
  test: XPath(Expr([
    Path(PathExpr(
      steps: [
        PrimaryExpr(FunctionCall(FunctionCall(
          name: Name(
            name: "true",
            prefix: None,
            namespace: Some("http://www.w3.org/2005/xpath-functions"),
          ),
          arguments: [],
        ))),
      ],
    )),
  ])),
  content: [
    Text("Hello"),
  ],
)))
