xee-xslt-ast/src/snapshots/xee_xslt_ast__parse3__tests__simple_parse_variable_broken_xpath.snap
---
source: xee-xslt-ast/src/parse3.rs
expression: "parser(&names).parse_with_state(stream, &mut state).into_result()"
---
Err([
  XPath(ExpectedFound(
    span: SimpleSpan(
      start: 39,
      end: 40,
      context: (),
    ),
  )),
])
