xee-xslt-ast/src/snapshots/xee_xslt_ast__parse3__tests__simple_parse_variable_missing_required_name_attribute.snap
---
source: xee-xslt-ast/src/parse3.rs
expression: "parser(&names).parse_with_state(stream, &mut state).into_result()"
---
Err([
  MissingRequiredAttribute(
    name: "name",
    span: SimpleSpan(
      start: 1,
      end: 9,
      context: (),
    ),
  ),
])
